--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -64,7 +64,6 @@
 
 .paw {
   padding-top: 8px;
-  width: 100%;
   text-align: right;
 }
 
